--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.11.10",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
